log
Sun, Apr 20, 2025  2:25:01 PM: 
 hashmap.c | 53 ++++++++++++++++++++++++++++-------------------------
 1 file changed, 28 insertions(+), 25 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1.exe: all warnings being treated as errors
eeef3b7
Sun, Apr 20, 2025  2:35:55 PM: 
 tests:  0|0
dee2e7e
Sun, Apr 20, 2025  2:38:18 PM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|5
total_score: 10/70
007a922
Sun, Apr 20, 2025  2:48:41 PM: 
 hashmap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:66:22: error: 'Pair' has no member named 'next'
   66 |             aux = aux->next;
      |                      ^~
hashmap.c:68:13: error: 'Pair' has no member named 'next'
   68 |         pair->next = map->buckets[index];
      |             ^~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
ff71e4c
Sun, Apr 20, 2025  2:49:05 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:66:22: error: 'Pair' has no member named 'next'
   66 |             aux = aux->next;
      |                      ^~
hashmap.c:68:13: error: 'Pair' has no member named 'next'
   68 |         pair->next = map->buckets[index];
      |             ^~
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
5a56ea3
